--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mlnx-dpdk (20.11-1mlnx1) UNRELEASED; urgency=medium
+mlnx-dpdk (20.11.0-3.1.11) UNRELEASED; urgency=medium
 
   * Initial packaging
 
